--- a/LSDP/styles.css
+++ b/LSDP/styles.css
@@ -474,8 +474,8 @@ img, video { max-width: 100%; height: auto; }
     display: block;
 }
 
-.bg {
-    z-index: -1;
+.noise {
+    z-index: 2147483647;
     position: fixed;
     top: -50%;
     left: -50%;
@@ -487,7 +487,8 @@ img, video { max-width: 100%; height: auto; }
     background-size: 30%;
     animation: bg-animation .2s infinite;
     opacity: 1;
-}
+    pointer-events: none; /* click-through */
+} 
 
 @keyframes bg-animation {
     0% { transform: translate(0,0) }
